testsuite/positive/Issue-git-0427-lib.n
using Nemerle;
using Nemerle.Extensions;

[Record, StructuralEquality]
public abstract class A
{
  public X : int { get }
  public Y : int { get }
}
