testsuite/negative/recursive-type-2.n
class A[T] { }
type X = A[Y]; // E: The type 'X' has recursive definition.
type Y = A[X];
